--- a/views/create_info.ejs
+++ b/views/create_info.ejs
@@ -54,6 +54,26 @@
                 <input class="form-control" value="" type="text" name="phone">
             </div>
             <div class="form-group">
+                <label>WhatsApp Number:</label>
+                <input class="form-control" type="text"  name="whatsapp">
+            </div>
+            <div class="form-group">
+                <label>Facebook:</label>
+                <input class="form-control" type="text" name="facebook">
+            </div>
+            <div class="form-group">
+                <label>Instagram:</label>
+                <input class="form-control" type="text"  name="instagram">
+            </div>
+            <div class="form-group">
+                <label>Twitter:</label>
+                <input class="form-control" type="text"  name="twitter">
+            </div>
+            <div class="form-group">
+                <label>Linkedin:</label>
+                <input class="form-control" type="text"  name="linkedin">
+            </div>
+            <div class="form-group">
                 <label>Email:</label>
                 <input class="form-control" value="" type="text" name="email">
             </div>
@@ -73,6 +93,10 @@
             <div class="form-group">
                 <label for="img">About image Cover:</label>
                 <input type="file" name="img" id="img" class="form-control-file form-control height-auto" >
+            </div>
+            <div class="form-group">
+                <label for="img2">Side Image</label>
+                <input type="file" name="img2" id="img2" class="form-control-file form-control height-auto">
             </div>
             <div class="form-group">
                 <div class="custom-file">
