--- a/views/create_land.ejs
+++ b/views/create_land.ejs
@@ -60,6 +60,10 @@
                 <input class="form-control" value="" type="text" name="area">
             </div>
             <div class="form-group">
+                <label>Price:</label>
+                <input class="form-control" value="" type="text" name="price">
+            </div>
+            <div class="form-group">
                 <label>Amenities:</label>
                 <textarea class="form-control" name="amenities"></textarea>
             </div>
