--- a/views/dash_include/HEADER_GEN.ejs
+++ b/views/dash_include/HEADER_GEN.ejs
@@ -74,12 +74,12 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand color-b nimage" href="/home"><img src="/img/Valiant_Logo-01.png" alt="" srcset="" width="150"></a>
+      <a class="navbar-brand text-brand color-b nimage" href="/"><img src="/img/Valiant_Logo-01.png" alt="" srcset="" width="150"></a>
       
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/home">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
@@ -100,7 +100,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contacting">Contact</a>
+            <a class="nav-link" href="/contact">Contact</a>
           </li>
         </ul>
       </div>
