--- a/views/dash_include/dashboard_all.ejs
+++ b/views/dash_include/dashboard_all.ejs
@@ -68,8 +68,8 @@
                     <li class="list_one"><i class="bi bi-newspaper" style="font-size: 1.5em; color: #007bff;"></i> Messages & News</li>
                     <div class="child-list">
                         <li><a href="/admin/blog/1"><i class="fas fa-minus"></i><span>Blogs</span></a></li>
-                        <li><a href="/admin/contact/1"><i class="fas fa-minus"></i><span>Contacts</span></a></li>
-                        <li><a href="/admin/email_subscriber"><i class="fas fa-minus"></i><span>Email Subscribers</span></a></li>
+                        <li><a href="/admin/contact/1"><i class="fas fa-minus"></i><span>Messages</span></a></li>
+                        <li><a href="/admin/email_subscriber"><i class="fas fa-minus"></i><span>Email The Subscribers</span></a></li>
                     </div>
                 </div>
                 
@@ -79,6 +79,14 @@
                         
                         <li><a href="/admin/creating-service"><i class="fas fa-minus"></i><span>Create Services</span></a></li>
                         <li><a href="/admin/creating-info"><i class="fas fa-minus"></i><span>Create Info</span></a></li>
+                        <li><a href="/admin/create-contact-image"><i class="fas fa-minus"></i><span>Contact Page Image</span></a></li>
+                    </div>
+                </div>
+                <div class="parent-lists">
+                    <li class="list_one"><i class="bi bi-person-workspace" style="font-size: 1.5em; color: #007bff;"></i> Careers </li>
+                    <div class="child-list">
+                        <li><a href="/admin/career-builder"><i class="fas fa-minus"></i><span>Create Job</span></a></li>
+                        <li><a href="/admin/alljobs/1"><i class="fas fa-minus"></i><span>All Jobs</span></a></li>
                     </div>
                 </div>
                 <li class="dashboard"><a href="/admin/change-password"><i class="bi bi-pass-fill" style="font-size: 2em; color: #007bff;"></i> Change Password</a></li>
