--- a/views/edit_land.ejs
+++ b/views/edit_land.ejs
@@ -63,6 +63,11 @@
             </div>
 
             <div class="form-group">
+                <label>Price:</label>
+                <input class="form-control" value="<%= land.price %>" type="text" name="price">
+            </div>
+
+            <div class="form-group">
                 <label>Amenities:</label>
                 <textarea class="form-control" name="amenities" id="amenities"><%= land.amenities %></textarea>
             </div>
