--- a/views/land_single.ejs
+++ b/views/land_single.ejs
@@ -86,6 +86,10 @@
                         <span><%= prop.location %></span>
                       </li>
                       <li class="d-flex justify-content-between">
+                        <strong>Price:</strong>
+                        <span>&#8358;<%= prop.price %></span>
+                      </li>
+                      <li class="d-flex justify-content-between">
                         <strong>Period:</strong>
                         <span><%= prop.period %></span>
                       </li>
