--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,7 +8,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-lg-8">
+            
             <div class="title-single-box">
+              
               <h1 class="title-single"><%= about.heading %></h1>
             </div>
           </div>
@@ -34,7 +36,11 @@
         <div class="row">
           <div class="col-sm-12 position-relative">
             <div class="about-img-box">
+              <% if (about.img) {%>
               <img src="data:Binary?<%= about.img.contentType %>;base64,<%= about.img.data.toString('base64') %>" alt="" class="img-fluid">
+              <% } else { %>
+                <p>No About information available.</p>
+                <% } %>
             </div>
             <div class="sinse-box">
               <h3 class="sinse-title"><%= about.company_name %>
@@ -47,7 +53,11 @@
           <div class="col-md-12 section-t8 position-relative">
             <div class="row">
               <div class="col-md-6 col-lg-5">
-                <img src="/img/about-2.jpg" alt="" class="img-fluid">
+                <% if (about.img) {%>
+                  <img src="data:Binary?<%= about.img2.contentType %>;base64,<%= about.img2.data.toString('base64') %>" alt="" class="img-fluid">
+                  <% } else { %>
+                    <p>No About information available.</p>
+                    <% } %>
               </div>
               <div class="col-lg-2  d-none d-lg-block position-relative">
                 <div class="title-vertical d-flex justify-content-start">
