--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,7 +10,7 @@
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
               <h1 class="title-single">Contact US</h1>
-              <span class="color-text-a">Kindly, send us your response, our Customer Service providers will provide you with suitable solution.</span>
+              <span class="color-text-a"><%= contact.message %></span>
             </div>
           </div>
           <div class="col-md-12 col-lg-4">
@@ -33,12 +33,16 @@
     <section class="contact">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12">
-            <div class="contact-map box">
-              <div id="map" class="contact-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1422937950147!2d-73.98731968482413!3d40.75889497932681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes+Square!5e0!3m2!1ses-419!2sve!4v1510329142834" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-              </div>
+         
+          <div class="col-sm-12 position-relative">
+            <div class="about-img-box">
+              <% if (contact.img) {%>
+              <img src="data:Binary?<%= contact.img.contentType %>;base64,<%= contact.img.data.toString('base64') %>" alt="" class="img-fluid">
+              <% } else { %>
+                <p>No contact information available.</p>
+                <% } %>
             </div>
+          
           </div>
           <div class="col-sm-12 section-t8">
             <%- include ('./messages/messages.ejs') %>
