--- a/views/create_service.ejs
+++ b/views/create_service.ejs
@@ -44,6 +44,10 @@
                 <input type="file" name="img" id="img" class="form-control-file form-control height-auto" >
             </div>
             <div class="form-group">
+                <label for="img2">Side Image</label>
+                <input type="file" name="img2" id="img2" class="form-control-file form-control height-auto">
+            </div>
+            <div class="form-group">
                 <div class="custom-file">
                     <input type="submit">
                 </div>
