--- a/views/dash_include/FOOTER_GEN.ejs
+++ b/views/dash_include/FOOTER_GEN.ejs
@@ -16,12 +16,12 @@
             <div class="w-footer-a">
               <ul class="list-unstyled">
                 <li class="color-a">
-                  <span class="color-text-a">Phone .</span>  <br><span class="color-a">+2349086560370</span>
-                  <br><span class="color-a">+2349086560371</span>
-                  <br><span class="color-a">+2349086560372</span>
+                  <span class="color-text-a">Phone .</span>  <br><span class="color-a"><a href="tel:+2349086560370">+2349086560370</a></span>
+                  <br><span class="color-a"><a href="tel:+2349086560371">+2349086560371</a></span>
+                  <br><span class="color-a"><a href="tel:+2349086560372">+2349086560372</a></span>
                 </li>
                 <li class="color-a">
-                  <span class="color-text-a">Email .</span> <br>valiantfoot@gmail.com 
+                  <span class="color-text-a">Email .</span> <br><a href="mailto:valiantfoot@gmail.com ">valiantfoot@gmail.com </a>
                 </li>
               </ul>
             </div>
@@ -45,7 +45,7 @@
                     <i class="bi bi-chevron-right"></i> <a href="/admin/login">Agent Admin</a>
                   </li>
                   <li class="item-list-a">
-                    <i class="bi bi-chevron-right"></i> <a href="#">Careers</a>
+                    <i class="bi bi-chevron-right"></i> <a href="/career">Careers</a>
                   </li>
                   <li class="item-list-a">
                     <i class="bi bi-chevron-right"></i> <a href="#">Affiliate</a>
@@ -103,23 +103,23 @@
                 <a href="/abouting">About</a>
               </li>
               <li class="list-inline-item">
-                <a href="/property/1">Housing</a>
+                <a href="/properting">Housing</a>
               </li>
               <li class="list-inline-item">
-                <a href="/lands/1">Lands</a>
+                <a href="/landing">Lands</a>
               </li>
               <li class="list-inline-item">
-                <a href="/blogs/1">Blog</a>
+                <a href="/bloging">Blog</a>
               </li>
               <li class="list-inline-item">
-                <a href="/contacting">Contact</a>
+                <a href="/contact">Contact</a>
               </li>
             </ul>
           </nav>
           <div class="socials-a">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://web.facebook.com/valiantfoothomes">
                   <i class="bi bi-facebook" aria-hidden="true"></i>
                 </a>
               </li>
@@ -129,12 +129,12 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.instagram.com/valianthomes__/">
                   <i class="bi bi-instagram" aria-hidden="true"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/valiant-foot-realtor7012/">
                   <i class="bi bi-linkedin" aria-hidden="true"></i>
                 </a>
               </li>
@@ -143,7 +143,7 @@
           <div class="copyright-footer">
             <p class="copyright color-text-a">
               &copy; 2023 Copyright
-              <span class="color-a">Valiantfoot</span> All Rights Reserved.
+              <span class="color-a">Valiantfoot Limited</span> All Rights Reserved.
             </p>
           </div>
          
