--- a/views/dash_include/header.ejs
+++ b/views/dash_include/header.ejs
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valiantfoot Admin</title>
-    <link href="/img/Valiant_Logo-01.png" rel="icon">
-    <link href="/img/Valiant_Logo-01.png" rel="Valiant_Logo-01">
+    <link rel="icon" href="/img/Valiant_Logo-01.png" type="image/x-icon">
+    <!-- <link href="/img/Valiant_Logo-01.png" rel="Valiant_Logo-01"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
