--- a/views/edit-property.ejs
+++ b/views/edit-property.ejs
@@ -62,6 +62,10 @@
                 <input class="form-control" value="<%= prop.area %>" type="text" name="area">
             </div>
             <div class="form-group">
+                <label>Price:</label>
+                <input class="form-control" value="<%= prop.price %>" type="text" name="price">
+            </div>
+            <div class="form-group">
                 <label>Bed:</label>
                 <input class="form-control" value="<%= prop.bed %>" type="text" name="bed">
             </div>
