--- a/views/edit_info.ejs
+++ b/views/edit_info.ejs
@@ -193,6 +193,10 @@
                             <input type="file" name="img" id="img" class="form-control-file form-control height-auto" >
                         </div>
                         <div class="form-group">
+                            <label for="img2">Sider image:</label>
+                            <input type="file" name="img2" id="img2" class="form-control-file form-control height-auto" >
+                        </div>
+                        <div class="form-group">
                             <div class="custom-file">
                                 <input type="submit">
                             </div>
