--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -63,7 +63,7 @@
                       <span class="bi bi-cash">&#8358;</span>
                     </div>
                     <div class="card-title-c align-self-center">
-                      <h5 class="title-c">15000</h5>
+                      <h5 class="title-c"><%= prop.price %></h5>
                     </div>
                   </div>
                 </div>
