--- a/views/property-grid.ejs
+++ b/views/property-grid.ejs
@@ -62,7 +62,7 @@
                   </div>
                   <div class="card-body-a">
                     <div class="price-box d-flex">
-                      <span class="price-a"><%= props.status%> | $ 12.000</span>
+                      <span class="price-a"><%= props.status%> | &#8358; <%= props.price %></span>
                     </div>
                     <a href="/property_single?id=<%= props._id %>" class="link-a">Click here to view
                       <span class="bi bi-chevron-right"></span>
