--- a/views/property-single.ejs
+++ b/views/property-single.ejs
@@ -37,7 +37,7 @@
     <section class="property-single nav-arrow-b">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-8">
+          <div class="col-lg-8"> <img src="data:Binary?<%= prop.img.contentType %>;base64,<%= prop.img.data.toString('base64') %>" alt="" class="img-fluid">
             <div id="property-single-carousel" class="swiper">
               <div class="swiper-wrapper">
                 <div class="carousel-item-b swiper-slide">
@@ -65,7 +65,7 @@
                       <span class="bi bi-cash">&#8358;</span>
                     </div>
                     <div class="card-title-c align-self-center">
-                      <h5 class="title-c">...</h5>
+                      <h5 class="title-c"><%= prop.price %></h5>
                     </div>
                   </div>
                 </div>
@@ -86,6 +86,10 @@
                       <li class="d-flex justify-content-between">
                         <strong>Location:</strong>
                         <span><%= prop.location %></span>
+                      </li>
+                      <li class="d-flex justify-content-between">
+                        <strong>Price:</strong>
+                        <span>&#8358;<%= prop.price %></span>
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Period:</strong>
