--- a/views/service_single.ejs
+++ b/views/service_single.ejs
@@ -47,7 +47,7 @@
           <div class="col-md-12 section-t8 position-relative">
             <div class="row">
               <div class="col-md-6 col-lg-5">
-                <img src="/img/about-2.jpg" alt="" class="img-fluid">
+                <img src="data:Binary?<%= service.img2.contentType %>;base64,<%= service.img2.data.toString('base64') %>" alt="" class="img-fluid">
               </div>
               <div class="col-lg-2  d-none d-lg-block position-relative">
                 <div class="title-vertical d-flex justify-content-start">
