--- a/views/dash_include/dashboard_all.ejs
+++ b/views/dash_include/dashboard_all.ejs
@@ -79,6 +79,8 @@
                         
                         <li><a href="/admin/creating-service"><i class="fas fa-minus"></i><span>Create Services</span></a></li>
                         <li><a href="/admin/creating-info"><i class="fas fa-minus"></i><span>Create Info</span></a></li>
+                        <li><a href="/admin/create-mission"><i class="fas fa-minus"></i><span>Create Mission</span></a></li>
+                        <li><a href="/admin/create-vision"><i class="fas fa-minus"></i><span>Create Vision</span></a></li>
                         <li><a href="/admin/create-contact-image"><i class="fas fa-minus"></i><span>Contact Page Image</span></a></li>
                     </div>
                 </div>
