--- a/views/land_single.ejs
+++ b/views/land_single.ejs
@@ -44,7 +44,7 @@
                   <img src="data:Binary?<%= prop.img.contentType %>;base64,<%= prop.img.data.toString('base64') %>" alt="">
                 </div>
                 <div class="carousel-item-b swiper-slide">
-                  <img src="data:Binary?<%= prop.img2.contentType %>;base64,<%= prop.img2.data.toString('base64') %>" alt="">
+                  <img src="data:Binary?<%= prop.image.contentType %>;base64,<%= prop.image.data.toString('base64') %>" alt="">
                 </div>
               </div>
             </div>
@@ -79,7 +79,7 @@
                     <ul class="list">
                       <li class="d-flex justify-content-between">
                         <strong>Property ID:</strong>
-                        <span><%= prop.property_id %></span>
+                        <span><%= prop.land_id %></span>
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Location:</strong>
