--- a/views/carearFrontPage.ejs
+++ b/views/carearFrontPage.ejs
@@ -86,7 +86,7 @@
           <div class="col-sm-12 position-relative">
             <div class="about-img-box">
              
-              <img src="/img/career.jpg" alt="" class="img-fluid">
+              <img src="/assets/img/we-are-hiring-collage-design.jpg" alt="" class="img-fluid">
             </div>
           </div>
           <div class="col-sm-12 section-t8">
