--- a/views/create_contact_image.ejs
+++ b/views/create_contact_image.ejs
@@ -34,7 +34,7 @@
                 <input class="form-control" type="text" placeholder="e.g contact us" name="message">
             </div>
             <div class="form-group">
-                <label for="img">Upload House Front view Image</label>
+                <label for="img">Upload Contact Preview Image</label>
                 <input type="file" name="img" id="img" class="form-control-file form-control height-auto" >
             </div>
            
