--- a/views/create_land.ejs
+++ b/views/create_land.ejs
@@ -77,7 +77,7 @@
             </div>
             <div class="form-group">
                 <label for="img1">Image 2</label>
-                <input type="file" name="img2" id="img2" class="form-control-file form-control height-auto">
+                <input type="file" name="image" id="img2" class="form-control-file form-control height-auto">
             </div>
             <div class="form-group">
                 <div class="custom-file">
