--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -80,6 +80,8 @@
                     <div class="child-list">
                         <li><a href="/admin/creating-service"><i class="fas fa-minus"></i><span>Create Services</span></a></li>
                         <li><a href="/admin/creating-info"><i class="fas fa-minus"></i><span>Create Info</span></a></li>
+                        <li><a href="/admin/create-mission"><i class="fas fa-minus"></i><span>Create Mission</span></a></li>
+                        <li><a href="/admin/create-vision"><i class="fas fa-minus"></i><span>Create Vision</span></a></li>
                         <li><a href="/admin/create-contact-image"><i class="fas fa-minus"></i><span>Contact Page Image</span></a></li>
                     </div>
                 </div>
@@ -160,6 +162,10 @@
                     <div class="companyname address">
                         <p class="naming">Email:</p>
                         <p><%= about.email %></p>
+                    </div>
+                    <div class="companyname address">
+                        <p class="naming">Whatsapp:</p>
+                        <p><%= about.whatsapp %></p>
                     </div>
                     <div class="companyname mobile">
                         <p class="naming">Mobile:</p>
