--- a/views/carearFrontPage.ejs
+++ b/views/carearFrontPage.ejs
@@ -97,7 +97,7 @@
             </p>
           </div>
         </div>
-        <% if(career) { %>
+        <% if (career && Array.isArray(career) && career.length > 0) { %>
         <ol>
 
         
