--- a/views/land.ejs
+++ b/views/land.ejs
@@ -44,7 +44,7 @@
                 <% land.forEach(function(land){ %>
                     <tr>
                         <td class="numberings"><%= count %></td>
-                        <td><%= land.property_id %></td>
+                        <td><%= land.land_id %></td>
                         <td><%= land.name %></td>
                         <td><%= land.location %></td>
                         <td><%= land.status%></td>
