--- a/views/create_blog.ejs
+++ b/views/create_blog.ejs
@@ -31,7 +31,7 @@
         <form action="/create-blog" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label>Author's Name:</label>
-                <input class="form-control" type="text" placeholder="e.g Idris Yusuph Olatunji Land" name="fullname">
+                <input class="form-control" type="text" placeholder="e.g Idris Yusuph Olatunji Land" name="fullname" value="<%= user.first_name %> <%= user.second_name %>" readonly>
             </div>
             <div class="form-group">
                 <label>Topic:</label>
